# clusterssh

./: .gitignore  .travis.yml  AUTHORS  Build.PL  ChangeLog  Changes  INSTALL  LICENSE  MANIFEST  MANIFEST.SKIP  META.json  META.yml  MYMETA.json  Makefile.PL  Makefile.am  NOTES  README  README.CVS  README.RELEASE  THANKS  TODO  WIP_TASKS  clusterssh.spec  configure.in  dist.ini  reconf  upload
.github/workflows/: dzil_tester.yml
bin_PL/: _build_docs  ccon  clusterssh_bash_completion.dist  crsh  csftp  cssh  ctel  expected_cssh.pod
clusterssh/: .cvsignore  .gitignore  AUTHORS  Build.PL  ChangeLog  LICENSE  Makefile.PL  Makefile.am  NEWS  README  README.CVS  THANKS  cchp  chk_cluster  clusterssh.desktop  clusterssh.spec  configure.in  crsh  cssh  install  make_package  release  upload  version
clusterssh/src/: .cvsignore  Makefile.am  cscp  cssh  cssh.pl
lib/: ClusterSSH.pm  clusters.pod
pod_data/: common_file  ctel
src/: .cvsignore  Makefile.am  cssh.pl
t/: 00-load.t  01l10n.t  02base.t  02new.t  05getopts.t  05ssh_config.t  10host.t  10host_ssh_config  10host_ssh_include  15conf_base.t_test1_symlink  15config.t  15config.t.file1  15config.t.file2  15config.t.file3  20confile_file.t  20confile_file.t_test1  20confile_file.t_test2  20gui.t  20helper.t  25gui_command.t  30cluster.cannot_read  30cluster.file1  30cluster.file2  30cluster.file3  30cluster.t  30cluster.tag1  50config.t  80clusterssh.t  boilerplate.t  changes.t  external_cluster_command  manifest.t  perlcritic.t  perltidy.t  perltidyrc  pod-coverage.t  pod.t  pod_coverage.t  range.t
(+47 files in other folders)
